[package]
name = "mls_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["gzip"]}
scraper = "0.12.0"
futures = "0.3"
tokio = {version = "1.12.0", features = ["full"]}
google_maps = "3.0"
async-std = "1.12.0"
